--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ THE SOFTWARE.
                 <option value="1">Sun Event</option>
                 <option value="2">Time of Day</option>
                 <option value="3">Duration</option>
-                <option value="9">Input Trigger</option>
+                <option value="9">Manual</option>
             </select>
         </div>
         <div class="form-row eztimer-offtype eztimer-offtype-sun">
